  immediately after closing an output file rsyslog was stopped
  or huped (the new output file open must NOT have happend at
  that point) - this lead to a sparse and invalid queue file
  which could cause several problems to the engine (unpredictable
  results). This situation should have happened only in very
  rare cases. tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=40
- bugfix: imfile could abort under extreme stress conditions
  (when it was terminated before it could open all of its
  to be monitored files)
- applied patch from varmojfekoj to fix an issue with compatibility 
  mode and default module directories (many thanks!):
  I've also noticed a bug in the compatibility code; the problem is that 
  options are parsed before configuration file so options which need a 
  module to be loaded will currently ignore any $moddir directive. This 
  can be fixed by moving legacyOptsHook() after config file parsing. 
  (see the attached patch) This goes against the logical order of 
  processing, but the legacy options are only few and it doesn't seem to 
  be a problem.
---------------------------------------------------------------------------
Version 3.11.5 (rgerhards), 2008-02-25
- new imgssapi module, changed imtcp module - this enables to load/package
  GSSAPI support separately - thanks to varmojfekoj for the patch
- compatibility mode (the -c option series) is now at least partly
  completed - thanks to varmojfekoj for the patch
- documentation for imgssapi and imtcp added
- duplicate $ModLoad's for the same module are now detected and
  rejected -- thanks to varmojfekoj for the patch
---------------------------------------------------------------------------
Version 3.11.4 (rgerhards), 2008-02-21
- bugfix: debug.html was missing from release tarball - thanks to Michael
  Biebl for bringing this to my attention
- some internal cleanup on the stringbuf object calling interface
- general code cleanup and further modularization